Align footer donate/sponsor buttons

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,8 +26,10 @@
       </div>
       <div><br /></div>
       <div class="footer-support-text">Interested in sponsoring us or pitching in for pizza and drinks? We'd love to talk to you</div>
-      <a class="btn btn--donate" href="https://buy.stripe.com/cN24hE161goQcZa8wx" target="_blank" rel="noopener noreferrer"><svg class="btn__icon icon" width="16" height="16"><use href="#icon-heart"></use></svg> Donate</a>
-      <a class="btn btn--donate" href="mailto:civictechwr@gmail.com" target="_blank" rel="noopener noreferrer"><svg class="btn__icon icon" width="16" height="16"><use href="#icon-handshake"></use></svg> Sponsor Us</a>
+      <div class="footer-support-actions">
+        <a class="btn btn--donate" href="https://buy.stripe.com/cN24hE161goQcZa8wx" target="_blank" rel="noopener noreferrer"><svg class="btn__icon icon" width="16" height="16"><use href="#icon-heart"></use></svg> Donate</a>
+        <a class="btn btn--donate" href="mailto:civictechwr@gmail.com" target="_blank" rel="noopener noreferrer"><svg class="btn__icon icon" width="16" height="16"><use href="#icon-handshake"></use></svg> Sponsor Us</a>
+      </div>
     </div>
 
     <div class="footer-col footer-links">
