--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
 <footer class="footer-redesign">
   <div class="footer-redesign-container">
+
     <div class="footer-col footer-brand">
       <a href="https://civictechwr.org">
         <picture>
@@ -24,9 +25,8 @@
           </div>
         </form>
       </div>
-      <div><br /></div>
-      <div class="footer-support-text">Interested in sponsoring us or pitching in for pizza and drinks? We'd love to talk to you</div>
-      <div class="footer-support-actions">
+      <br>
+      <div class="footer-support-actions">Interested in sponsoring us or pitching in for pizza and drinks? We'd love to talk to you
         <a class="btn btn--donate" href="https://buy.stripe.com/cN24hE161goQcZa8wx" target="_blank" rel="noopener noreferrer"><svg class="btn__icon icon" width="16" height="16"><use href="#icon-heart"></use></svg> Donate</a>
         <a class="btn btn--donate" href="mailto:civictechwr@gmail.com" target="_blank" rel="noopener noreferrer"><svg class="btn__icon icon" width="16" height="16"><use href="#icon-handshake"></use></svg> Sponsor Us</a>
       </div>
@@ -46,22 +46,22 @@
 
     <div class="footer-col footer-connect">
       <div class="footer-col-title">HELPFUL LINKS</div>
-      <ul class="footer-links-list">
-        <li><a href="https://civictechwr.github.io/CTWR-Organization-Documentation/Guidelines_&_Templates/Template_Pitching/">How to Pitch (Start of Season)</a></li>
-        <li><a href="https://civictechwr.github.io/CTWR-Organization-Documentation/Guidelines_&_Templates/Demo_Slides_Template/">Template Slides (End of Season)</a></li>
-        <li><a href="https://civictechwr.github.io/CTWR-Organization-Documentation/Guidelines_&_Templates/Guidline_Seasons/">Expected Season Timeline</a></li>
-        <br>
-        <li><a href="https://civictechwr.github.io/CTWR-Organization-Documentation/policies/Code_of_Conduct">Code of Conduct</a></li>
-        <li><a href="https://civictechwr.github.io/CTWR-Organization-Documentation/policies/Diversity_and_Inclusion_Policy">Diversity and Inclusion Policy</a></li>
-        <li><a href="https://civictechwr.github.io/CTWR-Organization-Documentation/Guidelines_&_Templates">Other Guidelines & Templates</a></li>
-      </ul>
-      <ul class="footer-links-list">
-        <li><a class="btn btn--footer" href="https://luma.com/civictechwr"><svg class="btn__icon icon" width="16" height="16"><use href="#icon-calendar-alt"></use></svg> Upcoming Hacknight</a></li>
-        <li><a class="btn btn--footer" href="https://join.slack.com/t/civictechwr/shared_invite/zt-2hk4c93hv-DEIbxR_z1xKj8cZmayVHTw" target="_blank" rel="noopener noreferrer"><svg class="btn__icon icon" width="16" height="16"><use href="#icon-slack"></use></svg> Join us on Slack</a></li>
-        <li><a class="btn btn--footer" href="https://feedback.ctwr.org/"><svg class="btn__icon icon" width="16" height="16"><use href="#icon-comment-dots"></use></svg> Submit Feedback</a></li>
-      </ul>
+        <ul class="footer-links-list">
+          <li><a href="https://civictechwr.github.io/CTWR-Organization-Documentation/Guidelines_&_Templates/Template_Pitching/">How to Pitch (Start of Season)</a></li>
+          <li><a href="https://civictechwr.github.io/CTWR-Organization-Documentation/Guidelines_&_Templates/Demo_Slides_Template/">Template Slides (End of Season)</a></li>
+          <li><a href="https://civictechwr.github.io/CTWR-Organization-Documentation/Guidelines_&_Templates/Guidline_Seasons/">Expected Season Timeline</a></li>
+          <br>
+          <li><a href="https://civictechwr.github.io/CTWR-Organization-Documentation/policies/Code_of_Conduct">Code of Conduct</a></li>
+          <li><a href="https://civictechwr.github.io/CTWR-Organization-Documentation/policies/Diversity_and_Inclusion_Policy">Diversity and Inclusion Policy</a></li>
+          <li><a href="https://civictechwr.github.io/CTWR-Organization-Documentation/Guidelines_&_Templates">Other Guidelines & Templates</a></li>
+        </ul>
+        <ul class="footer-links-list">
+          <li><a class="btn btn--footer" href="https://luma.com/civictechwr"><svg class="btn__icon icon" width="16" height="16"><use href="#icon-calendar-alt"></use></svg> Upcoming Hacknight</a></li>
+          <li><a class="btn btn--footer" href="https://join.slack.com/t/civictechwr/shared_invite/zt-2hk4c93hv-DEIbxR_z1xKj8cZmayVHTw" target="_blank" rel="noopener noreferrer"><svg class="btn__icon icon" width="16" height="16"><use href="#icon-slack"></use></svg> Join us on Slack</a></li>
+          <li><a class="btn btn--footer" href="https://feedback.ctwr.org/"><svg class="btn__icon icon" width="16" height="16"><use href="#icon-comment-dots"></use></svg> Submit Feedback</a></li>
+        </ul>
+      </div>
     </div>
-  </div>
 
     <div class="text-center col-12">
       <div class="footer-social-icons">
@@ -75,4 +75,5 @@
       <div class="footer-copyright-wrapper"><p>Civic Tech Waterloo Region | All rights reserved</p></div>
     </div>
 
+  </div>
 </footer>
