--- a/_includes/meeting-section.html
+++ b/_includes/meeting-section.html
@@ -2,27 +2,18 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-lg-6 col-12">
-        <div class="meeting-image-wrapper">
           <picture>
             <source srcset="/images/hacknight-8.webp" type="image/webp" />
             <img src="/images/hacknight-8.jpg" class="about-image img-fluid" alt="CivicTech Waterloo Region community members at weekly hacknight gathering" loading="lazy" decoding="async" />
           </picture>
-        </div>
       </div>
       <div class="col-lg-6 col-12">
         <div class="meeting-content">
-          <h2 class="meeting-title text-center mb-4">We look forward to seeing you at our next meeting</h2>
+          <h2 class="meeting-title text-center mb-4">We look forward to seeing you at our next hacknight</h2>
 
           <div class="meeting-card">
             <div class="meeting-details">
-              <div class="meeting-detail-item">
-                <div class="meeting-icon">
-                  <svg class="icon" width="24" height="24" aria-hidden="true"><use href="#icon-question-circle-fill"/></svg>
-                </div>
-                <div class="meeting-text">
-                  <span id="meeting-name">CTWR Weekly Hacknight</span>
-                </div>
-              </div>
+    
 
               <div class="meeting-detail-item">
                 <div class="meeting-icon">
@@ -44,7 +35,7 @@
             </div>
 
             <div class="meeting-cta">
-              <div class="btn-group btn-group--center">
+              <div class="btn-group">
                 <a id="meeting-btn" class="btn btn--meeting" href="https://luma.com/civictechwr">More Details & RSVP</a>
               </div>
             </div>
