--- a/_includes/newsletter-signup.html
+++ b/_includes/newsletter-signup.html
@@ -1,24 +1,25 @@
 <!-- Begin Mailchimp Signup Form -->
-<div id="mc_embed_shell">
-  <div id="mc_embed_signup">
-    <form action="https://civictechwr.us11.list-manage.com/subscribe/post?u=70e9ca4ba196596a75a7b6a3e&amp;id=YOUR_LIST_ID&amp;f_id=YOUR_FORM_ID" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate newsletter-form" target="_blank">
-      <div id="mc_embed_signup_scroll">
-        <div class="mc-field-group">
-          <label for="mce-EMAIL" class="newsletter-label">Email Address <span class="asterisk">*</span></label>
-          <input type="email" name="EMAIL" class="required email newsletter-input" id="mce-EMAIL" required="" value="" placeholder="your@email.com" aria-label="Email Address">
+<section class="newsletter-cta section-padding shape-container" id="newsletter-section">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-lg-8 col-12 text-center">
+              <div class="abstract-shape shape-circle left-10p top-20p" aria-hidden="true"></div>
+              <div class="abstract-shape shape-star right-10p top-30p" aria-hidden="true"></div>
+              <h2 class="mb-4">Can't make it but want to stay in the Loop?</h2>
+              <p class="mb-4">Get updates on upcoming hacknights, new projects, and community news delivered to your inbox.</p>
+              <div id="mc_embed_signup_main" class="newsletter-signup-main">
+                <form action="https://civictechwr.us11.list-manage.com/subscribe/post?u=70e9ca4ba196596a75a7b6a3e&amp;id=e8b89282ec" method="post" id="mc-embedded-subscribe-form-main" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+                  <div class="newsletter-form-wrapper">
+                    <input type="email" name="EMAIL" class="email newsletter-input-main" id="mce-EMAIL-main" placeholder="your@email.com" required="" aria-label="Email Address">
+                    <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                      <input type="text" name="b_70e9ca4ba196596a75a7b6a3e_e8b89282ec" tabindex="-1" value="">
+                    </div>
+                    <input type="submit" name="subscribe" id="mc-embedded-subscribe-main" class="btn newsletter-btn-main" value="Subscribe">
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
         </div>
-        <div id="mce-responses" class="clear foot">
-          <div class="response" id="mce-error-response" style="display: none;"></div>
-          <div class="response" id="mce-success-response" style="display: none;"></div>
-        </div>
-        <div aria-hidden="true" style="position: absolute; left: -5000px;">
-          <input type="text" name="b_70e9ca4ba196596a75a7b6a3e_YOUR_LIST_ID" tabindex="-1" value="">
-        </div>
-        <div class="clear foot">
-          <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button btn btn--primary newsletter-submit" value="Subscribe">
-        </div>
-      </div>
-    </form>
-  </div>
-</div>
+      </section>
 <!--End mc_embed_signup-->
